--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <input type="text" value="pencarian">
-    <div>hallo</div>
-    <div>percobaan</div>
+    <input type="checkbox" value="lelaki">
+    <p>Laki Laki</p>
+    <input type="checkbox" value="Perempuan">
+    <p>Perempuan</p>
 </body>
 </html>
