fetch: Gender Kelainan

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <p>Laki Laki</p>
     <input type="checkbox" value="Perempuan">
     <p>Perempuan</p>
+    <input type="checkbox" value="non-binary">
+    <p>Non Binary</p>
 </body>
 </html>
