--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     
     <div>
-        <input type="text" name="search">
+        <input id='inputan' type="text" name="search">
     </div>
 
     <div>
