--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div>
         <input id='inputan' type="text" name="search">
     </div>
-    
+
     <div>
         <input type="checkbox" value="lelaki">
     <p>Laki Laki</p>
@@ -19,5 +19,9 @@
     <p>Non Binary</p>
     </div>
     
+    <div class="card">
+        <img src="nike.com/sepatu-1.png">
+    </div>
+
 </body>
 </html>
